feat: 检测首页表格布局样式调整

--- a/web/src/global.less
+++ b/web/src/global.less
@@ -551,7 +551,7 @@ ol {
     background: @primary-2 !important;  }
 }
 .ant-layout-content .__view{
-  background-color: #fff;
+  //background-color: #fff;
 }
 .table-wrapper .ant-pagination.ant-table-pagination{
   position: fixed;
